[gd_scene load_steps=7 format=3 uid="uid://clrvnuok4seya"]

[ext_resource type="PackedScene" uid="uid://11gaa8tv0pbj" path="res://scenes/images/map_image.tscn" id="1_rxxyl"]
[ext_resource type="PackedScene" uid="uid://t1vs2cc6h7ua" path="res://scenes/Buttons/trees.tscn" id="2_r4c6e"]
[ext_resource type="PackedScene" uid="uid://boyomqbtxnrph" path="res://scenes/images/small_car.tscn" id="3_ehj31"]
[ext_resource type="Theme" uid="uid://bon0nwmkmu0qt" path="res://assets/theme.tres" id="4_qitp5"]
[ext_resource type="Script" path="res://scenes/images/small_car.gd" id="4_sk6g8"]
[ext_resource type="AudioStream" uid="uid://b2qty8if0wu6e" path="res://assets/audio/sfx/explosion (1).wav" id="6_dhudr"]

[node name="start" type="Node2D"]

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-5, 50)
points = PackedVector2Array(-385, -60, 291, -76)
width = 500.0
default_color = Color(0.262954, 0.421875, 0.0788481, 1)

[node name="Map-image" parent="." instance=ExtResource("1_rxxyl")]
position = Vector2(-36, -36)

[node name="trees" parent="." instance=ExtResource("2_r4c6e")]
position = Vector2(87, 36)

[node name="small_car" parent="." instance=ExtResource("3_ehj31")]
position = Vector2(-224, -154)
scale = Vector2(0.608807, 0.608807)
script = ExtResource("4_sk6g8")

[node name="Button" type="Button" parent="small_car"]
offset_left = -124.0
offset_top = -21.0
offset_right = 683.0
offset_bottom = 112.0
theme = ExtResource("4_qitp5")

[node name="CPUParticles2D1" type="CPUParticles2D" parent="small_car"]
position = Vector2(-79, 101)
rotation = -0.342787
emitting = false
spread = 13.38
gravity = Vector2(0, 50)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
scale_amount_max = 8.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="small_car"]
position = Vector2(630.742, 93.6257)
rotation = -0.342787
emitting = false
spread = 13.38
gravity = Vector2(0, 50)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
scale_amount_max = 8.0

[node name="CPUParticles2D3" type="CPUParticles2D" parent="small_car"]
position = Vector2(591.32, 91.9832)
rotation = -0.342787
emitting = false
spread = 13.38
gravity = Vector2(0, 50)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
scale_amount_max = 8.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="small_car"]
stream = ExtResource("6_dhudr")
bus = &"quait_sfx"

[node name="Label" type="Label" parent="."]
offset_left = -119.0
offset_top = -144.0
offset_right = 8.0
offset_bottom = -101.0
theme = ExtResource("4_qitp5")
text = "Bust In"

[connection signal="pressed" from="small_car/Button" to="small_car" method="_on_button_pressed"]
